--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# =========================
+# Dependencies
+# =========================
+node_modules/
+.pnpm-debug.log*
+.pnpm-store/
 
-# dependencies
-/node_modules
-/.pnp
+# ❌ Disallow other package managers
+package-lock.json
+yarn.lock
+.pnp
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,32 +16,44 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# =========================
+# Testing
+# =========================
+coverage/
 
-# next.js
-/.next/
-/out/
+# =========================
+# Next.js
+# =========================
+.next/
+out/
+build/
 
-# production
-/build
+# =========================
+# Environment
+# =========================
+.env*
+!.env.example
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# =========================
+# Logs
+# =========================
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
-# env files (can opt-in for committing if needed)
-.env*
+# =========================
+# OS / Editor
+# =========================
+.DS_Store
+*.pem
 
-# vercel
+# =========================
+# Vercel
+# =========================
 .vercel
 
-# typescript
+# =========================
+# TypeScript
+# =========================
 *.tsbuildinfo
 next-env.d.ts
