--- a/package.json
+++ b/package.json
@@ -2,22 +2,21 @@
   "name": "contract-driven-workflow",
   "version": "0.1.0",
   "private": true,
-
   "packageManager": "pnpm@9.12.0",
   "engines": {
     "node": ">=18",
     "pnpm": ">=9"
   },
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "vitest"
+    "test": "vitest",
+    "gen:workflow": "openapi-typescript openapi/workflow.yaml -o src/domain/workflow/workflow.openapi.ts"
   },
-
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -25,7 +24,6 @@
     "zod": "^4.3.6",
     "zustand": "^5.0.10"
   },
-
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
@@ -36,6 +34,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "jsdom": "^27.4.0",
+    "openapi-typescript": "^7.10.1",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
